--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,9 +1,12 @@
 {
   "name": "@cicd-demo/ui",
-  "version": "0.0.0",
+  "version": "1.0.1",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch",
